Fixed more layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -148,6 +148,41 @@ nav a{
     }
 }
 
+@media only screen and (max-width: 414px) {
+    .sp-home-card-section{
+        width: 300px;
+        height: 420px;
+    }
+
+    .sp-home-card-section #resume-button{
+        padding: 4px 12px !important;
+    }
+
+    .sp-home-card-section #contact-button{
+        padding: 4px 12px !important;
+    }
+
+    .sp-home-card-section img{
+        bottom: -70px;
+    }
+
+    .sp-home-card-section h1{
+        font-size: 2.3rem;
+    }
+
+    .sp-home-card-section p{
+        font-size: 0.9rem;
+    }
+
+    .sp-card-group{
+        width: 300px;
+    }
+
+    #sp-contacts-group{
+        flex-direction: column;
+        align-items: center;
+    }
+}
 
 .sp-back-card-red{
     position: absolute;
